--- a/备忘/M1.md
+++ b/备忘/M1.md
@@ -15,14 +15,16 @@
 ```
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 ```
-
-命令行输入：`sudo vim ~/.bash_profile`
-
-在该文件中添加一行（命令行模式下点“i”插入）：`export PATH="/opt/homebrew/bin:$PATH"`
-
-保存文件并退出（命令行模式下输入:`wq`保存退出）
-
-命令行输入，激活文件：`source ~/.bash_profile`
+安装完终端会有提示
+```shell
+==> Next steps:
+- Run these two commands in your terminal to add Homebrew to your PATH:
+ echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> /Users/youzhenbei/.zprofile
+ eval "$(/opt/homebrew/bin/brew shellenv)"
+- Run brew help to get started
+- Further documentation:
+ https://docs.brew.sh
+```
 
 ---
 
@@ -30,31 +32,19 @@
 
 `brew install nvm`
 
-进入.nvm文件夹 cd ~/.nvm
-
-查看有没有`.bash_profile`文件，直接输入`ls`就可以查看当前文件夹下文件，如果有就直接`open .bash_profile`进入文件，如果没有则`touch .bash_profile`新建文件。
-
-`open .bash_profile`进入文件，输入以下代码
-
-```
+安装完终端会有提示
+```shell
+You should create NVM's working directory if it doesn't exist:
+mkdir ~/.nvm
+Add the following to ~/.zshrc or your desired shell
+configuration file:
 export NVM_DIR="$HOME/.nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
-```
-
-两行，输入完成后直接退出。
-
-编译该文件 `source .bash_profile`
-
-直接执行nvm检查是否安装完成
-
-安装完成后解决每次打开终端都需要重新执行`source .bash_profile`才能重新使用`nvm`命令的问题
-
-原因：没有将配置添加到`.zshrc`文件中
-
-先检查是否有`.zshrc`，如果有直接打开  open ~/.zshrc，然后粘贴下边这两行代码
-```
- export NVM_DIR=~/.nvm
- [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
+ [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && . "/opt/homebrew/opt/nvm/nvm.sh" # This loads nvm
+ [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && . "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" # This loads nvm bash_completion
+You can set $NVM_DIR to any location, but leaving it unchanged from
+/opt/homebrew/opt/nvm will destroy any nvm-installed Node installations
+upon upgrade/reinstall.
+Type nvm help for further information.
 ```
 
 ---
